--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <link rel="stylesheet" href="style.css">
         <title>Document</title>
     </head>
+    <script src="./app.js">
+
+    </script>
+
     <body>
         <h1>Hello words </h1>
         <h2>React traning</h2>
